fix: resolve styles for dark mode

--- a/src/assets/styles/components/_button.scss
+++ b/src/assets/styles/components/_button.scss
@@ -432,9 +432,12 @@
       }
     }
     &--text {
-      color: var(--blue-300);
+      color: var(--blue-800);
       &:hover {
-        color: var(--blue-200);
+        color: var(--blue-600);
+        svg path {
+          fill: var(--blue-600);
+        }
       }
     }
   }
